# SmartStockAdvisorApp

./: .dockerignore  .gitignore  Agent_engine.py  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.next/: trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: _error.js
.next/server/pages/: _error.js  chat.js  index.js
.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
.next/static/chunks/: _error.js  webpack.js
.next/static/chunks/pages/: chat.js  index.js
.next/static/webpack/: webpack.8b0cb7acbc93cc1f.hot-update.js  webpack.9bb6bb1fb6f68da8.hot-update.js
agent/SmartStockAdvisorAgent/: __init__.py  agent.py  prompt.py  tools.py
agent/SmartStockAdvisorAgent/Sub_agents/Data_Analyst_Agent/: agent.py  prompt.py
agent/SmartStockAdvisorAgent/Sub_agents/Trend_Analysis_Agent/: __init__.py  agent.py  prompt.py
static/: style.css
templates/: chat.html  login.html
